k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trivia-api-svc
  namespace: trivia
  labels:
    app: trivia-api
spec:
  selector:
    app: trivia-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
