k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trivia-api-ingress
  namespace: trivia
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: trivia.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trivia-api-svc
                port:
                  number: 80
